gitops/apps/seafile/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile-mysql
  template:
    metadata:
      labels:
        app: seafile-mysql
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-1
      containers:
        - name: mariadb
          image: mariadb:10.11
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: seafile-mysql-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile
  template:
    metadata:
      labels:
        app: seafile
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-1
      containers:
        - name: seafile
          image: seafileltd/seafile-mc:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: seafile-data
              mountPath: /shared
      volumes:
        - name: seafile-data
          persistentVolumeClaim:
            claimName: seafile-data-pvc
