gitops/apps/seafile/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: seafile-mysql-service
  namespace: seafile
spec:
  selector:
    app: seafile-mysql
  ports:
    - port: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: seafile-service
  namespace: seafile
spec:
  selector:
    app: seafile
  ports:
    - port: 80
      targetPort: 80
