gitops/apps/seafile/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seafile-ingress
  namespace: seafile
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`seafile.nooblearn2code.com`)
      kind: Rule
      services:
        - name: seafile-service
          port: 80
